--- a/src/routes/components/Club Page/components/Modal/EventEditModal.module.css
+++ b/src/routes/components/Club Page/components/Modal/EventEditModal.module.css
@@ -119,7 +119,7 @@
   border-radius: 0.5rem;
   /* border-bottom: 0.2px soli`d #3e7cb1; */
   background: #2c2c2c;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 0.5rem;
@@ -197,7 +197,7 @@ textarea {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-height: 50vh;
+  /* max-height: 70vh; */
 }
 
 .dropzone {
