--- a/src/routes/components/Club Page/components/PORHolder/PORCard.module.css
+++ b/src/routes/components/Club Page/components/PORHolder/PORCard.module.css
@@ -71,10 +71,10 @@
 .deleteButton,
 .editButton {
   position: absolute;
+  z-index: 1;
 
   padding: 0;
-  top: -40px;
-  left: 0;
+  top: 0;
 
   height: 40px;
   aspect-ratio: 1/1;
@@ -87,13 +87,11 @@
 }
 
 .editButton {
-  top: -40px;
-  left: auto;
   right: 0;
 }
 
 .deleteButton img {
-  z-index: 2;
+  /* z-index: 2; */
 
   height: 40px;
 
@@ -102,7 +100,7 @@
 }
 
 .editButton img {
-  z-index: 2;
+  /* z-index: 2; */
 
   height: 20px;
 
